--- a/baidelkoul_khadidja_manal_ML_AutoML_Homework.ipynb
+++ b/baidelkoul_khadidja_manal_ML_AutoML_Homework.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "12CCYHYSGBQZVEblxN_cq1FNuuJWJNdjM",
-      "authorship_tag": "ABX9TyMigQNjfONM4NTjoi83UrFm",
+      "authorship_tag": "ABX9TyP0QszYMcG93efb24yaFmSL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -26,6 +26,43 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/manelbek/baidelkoul-khadidja-manal-ML-AutoML-Homework.ipynb/blob/main/baidelkoul_khadidja_manal_ML_AutoML_Homework.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# PROJET 1 : Segmentation clientèle\n",
+        "\n",
+        "\n",
+        "**Visualisations**\n",
+        "\n",
+        "Les graphiques permettent de comprendre le comportement des clients.\n",
+        "La distribution de l’âge montre que la majorité des clients sont des adultes.\n",
+        "Le graphique revenu annuel vs score de dépense montre que les clients ont des habitudes de consommation différentes.\n",
+        "\n",
+        "**Analyse**\n",
+        "\n",
+        "Le clustering permet de regrouper les clients en plusieurs segments.\n",
+        "Chaque segment représente un type de client avec un comportement similaire.\n",
+        "Ces résultats aident à proposer des actions marketing adaptées à chaque groupe.\n",
+        "\n",
+        "\n",
+        "# PROJET 2 : Détection de fraude\n",
+        "\n",
+        "**Visualisations**\n",
+        "\n",
+        "La distribution des classes montre que les transactions frauduleuses sont très rares.\n",
+        "La matrice de confusion permet de voir les erreurs du modèle.\n",
+        "Le graphique des prédictions montre comment le modèle classe les transactions.\n",
+        "\n",
+        "**Analyse**\n",
+        "\n",
+        "Les modèles de classification permettent de détecter les fraudes automatiquement.\n",
+        "La forêt aléatoire donne de meilleurs résultats que la régression logistique.\n",
+        "La préparation des données est très importante à cause du déséquilibre des classes."
+      ],
+      "metadata": {
+        "id": "lmUAz2b6GHkR"
+      }
     },
     {
       "cell_type": "code",
